2010-11-29  Joakim Tjernlund  <Joakim.Tjernlund@transmode.se>

	* config/rs6000/rs6000.c (rs6000_reg_live_or_pic_offset_p): Check
	TARGET_SINGLE_PIC_BASE for RS6000_PIC_OFFSET_TABLE_REGNUM.
	(rs6000_emit_prologue): Don't set PIC register if
	TARGET_SINGLE_PIC_BASE.
	* config/rs6000/rs6000.opt (msingle-pic-base): New option.
	* doc/invoke.texi (msingle-pic-base): Document.

2010-11-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR driver/46712
	* exec-tool.in (id): New.
	Check and export LT_RCU_$id instead of LT_RCU.

2010-11-29  Zdenek Dvorak  <rakdver@kam.uniff.cz>

	PR tree-optimization/46675
	* tree-ssa-loop-niter.c (split_to_var_and_offset): Avoid overflow
	in offset calculation.

2010-11-29  Jan Hubicka  <jh@suse.cz>

	* collect2.c (main): Do not imply verbose output with
	LTO and linker plugin.

2010-11-29  Dodji Seketeli  <dodji@redhat.com>

	* dwarf2out.c (print_die): Print the address of the current DIE or
	of any DIE referenced by the current one.

2010-11-29  Dodji Seketeli  <dodji@redhat.com>

	PR debug/46101
	* dwarf2out.c (lookup_type_die_strip_naming_typedef): New
	function.
	(scope_die_for, gen_type_die_for_member): Replace uses of
	lookup_type_die with use of lookup_type_die_strip_naming_typedef.

2010-11-29  Iain Sandoe  <iains@gcc.gnu.org>

	* config/darwin.c (darwin_mergeable_string_section): Remove blank line.
	(darwin_asm_declare_object_name): Correct spelling.
	(darwin_output_aligned_bss): Likewise.

2010-11-29  Iain Sandoe  <iains@gcc.gnu.org>
	    Mike Stump  <mrs@gcc.gnu.org>

	PR target/26427
	PR target/33120
	PR testsuite/35710
	* config/i386/darwin.h (ASM_OUTPUT_COMMON): Remove
	(ASM_OUTPUT_LOCAL): Likewise.
	* config/darwin-protos.h (darwin_asm_declare_object_name): New.
	(darwin_output_aligned_bss): Likewise.
	(darwin_asm_output_aligned_decl_local): Likewise.
	(darwin_asm_output_aligned_decl_common): Likewise.
	(darwin_use_anchors_for_symbol_p): Likewise.
	* config/rs6000/darwin.h (ASM_OUTPUT_COMMON): Remove.